[metadata]
name = qbindiff
description = QBindiff binary diffing tool based on a Network Alignment problem
version = 0.2
author = Elie Mengin, Robin David
author_email = emengin@quarkslab.com, rdavid@quarkslab.com
url = https://gitlab.qb/machine_learning/qbindiff

[options]
package_dir = 
    = src
packages = qbindiff
install_requires =
    protobuf == 3.*
    click
    tqdm
    numpy
    scipy
    lapjv
    networkx
    python-louvain
    capstone
scripts = bin/qbindiff


[options.extras_require]
QBinExport backend = qbinexport
