[metadata]
name = qbindiff
description = QBindiff binary diffing tool based on a Network Alignment problem
version = 0.2
author = Elie Mengin, Robin David, Riccardo Mori, Alexis Challande
author_email = rmori@quarkslab.com, rdavid@quarkslab.com, achallande@quarkslab.com
url = https://gitlab.qb/machine_learning/qbindiff

[options]
package_dir = 
    = src
packages = find:
install_requires =
    click
    tqdm
    numpy
    scipy
    lapjv
    networkx
    capstone
    datasketch
scripts = bin/qbindiff

[options.packages.find]
where = src
include = qbindiff*

[options.extras_require]
BinExport backend = protobuf >=3,<4
QBinExport backend = qbinexport
Community detection = python-louvain
